Fix Issue : screen jumping at modal opening

--- a/src/index.css
+++ b/src/index.css
@@ -432,6 +432,10 @@ body {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
+.uploadcare--page {
+  height: 100%;
+}
+
 .login-page {
   display: -webkit-box;
   display: -ms-flexbox;
